Causeview Package Complete/src/objects/Gift__c.object
<CustomObject>
    <fields>
        <fullName>Tribute_Notification_Address__c</fullName>
        <description>Mailing street tribute is to be sent</description>
        <label>Notification Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_City__c</fullName>
        <description>Mailing city for tribute</description>
        <label>Notification City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_Country__c</fullName>
        <description>Mailing country for tribute</description>
        <label>Notification Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_Date__c</fullName>
        <description>Date the tribute notification was sent</description>
        <label>Tribute Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_Email__c</fullName>
        <description>Email address used to send tribute notification</description>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_Method__c</fullName>
        <description>Method of sending tribute to info provided</description>
        <label>Tribute Notification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_State_Province__c</fullName>
        <description>Tribute notification mailing state/province</description>
        <label>Notification State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Notification_Zip_Postal_Code__c</fullName>
        <description>Tribute notification mailing zip/postal code</description>
        <label>Notification Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Person_To_Notify__c</fullName>
        <description>Person to notify regarding tribute gift</description>
        <label>Tribute Person To Notify</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <description>Tribute classification type</description>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Memorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorarium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Withdrawl_Day__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Withdrawl Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Write_Off_Amount__c</fullName>
        <description>Roll up of all payments of status = Written Off</description>
        <inlineHelpText>Total amount of written off payments</inlineHelpText>
        <label>Write Off Amount</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Written Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sysLastAllocationUpdate__c</fullName>
        <description>Defines the date when an allocation was last updated.  This is used in conjunction with the field update to trigger workflows.</description>
        <label>_sysLastAllocationUpdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sysLastPaymentUpdate__c</fullName>
        <description>Defines the date when an payment was last updated. This is used in conjunction with the field update to trigger workflows.</description>
        <label>_sysLastPaymentUpdate</label>
        <type>Date</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All_Event_Registration</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Organization__c</columns>
        <columns>Gift_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Gift__c.Event_Registration</value>
        </filters>
        <label>All Event Registration</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Pledges</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Organization__c</columns>
        <columns>No_of_Expected_Payments__c</columns>
        <columns>Number_of_Payments__c</columns>
        <columns>No_of_Outstanding_Payments__c</columns>
        <columns>Expected_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Outstanding_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gift_Type__c</field>
            <operation>equals</operation>
            <value>Pledge</value>
        </filters>
        <filters>
            <field>No_of_Outstanding_Payments__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Open Pledges</label>
    </listViews>
    <listViews>
        <fullName>All_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gift_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Gift_Type__c</columns>
        <columns>Channel__c</columns>
        <columns>Organization__c</columns>
        <columns>Recurring_Donation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Event_Registration</fullName>
        <active>true</active>
        <description>Event registration</description>
        <label>Event Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <description>A converted Opportunity</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gift</fullName>
        <active>true</active>
        <description>Matched gift from employer</description>
        <label>Matching Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pledge</fullName>
        <active>true</active>
        <description>Pledge Record Type</description>
        <label>Pledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Purchase</fullName>
        <active>true</active>
        <description>The purchase of products or sell-able goods</description>
        <label>Product Purchase</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular</fullName>
        <active>true</active>
        <description>Gifts and donations</description>
        <label>Gift</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IndividualOrOrg</fullName>
        <active>true</active>
        <description>Validates that only Individual or Organization is populated.</description>
        <errorConditionFormula>NOT(ISBLANK(Constituent__c)) &amp;&amp; NOT(ISBLANK( Organization__c))</errorConditionFormula>
        <errorMessage>A gift cannot be associated to both an Individual and an Organization.  Only one of the fields can be populated per gift.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IndividualOrOrgRequired</fullName>
        <active>true</active>
        <description>Displays an error if Transaction is not hard credited to either an Individual or Organization</description>
        <errorConditionFormula>AND(ISBLANK( Constituent__c ),ISBLANK( Organization__c ))</errorConditionFormula>
        <errorMessage>You must hard credit the transaction to either an Individual or an Organizations</errorMessage>
    </validationRules>
</CustomObject>